--- a/project_test/Python_06.ipynb
+++ b/project_test/Python_06.ipynb
@@ -5521,6 +5521,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HI JAVA "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI JAVA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"HI JAVA\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
